# forty5park-primemfr

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: 042026-hist-rent-12060-12060.parquet  042026-property-enriched-12060.parquet  042026-rent-12060.parquet  042026-unit-mix-enriched-12060.parquet  best_catboost_params.json  best_params.json  metrics.json
configs/features/: categorical.yaml  numeric.yaml
configs/hyperparams/: catboost.yaml  knn.yaml  lightgbm.yaml
configs/models/: cold_start.yaml  graceful.yaml  primary.yaml
configs/pipelines/: default.yaml
docs/: feature_engineering_spec.md  feature_pipeline_contract.md  geospatial_features.md  ml_stack_spec.md  results.md  tutorial_local_setup.md  vignette_add_new_poi.md
eda/: MARTA_stations.geojson  Yardi EDA - New Geospatial Features.ipynb  atlanta_landmarks.json  bars.geojson  bars_nightclubs.json  coffee_shops.json  fetch_bars_nightclubs.py  fetch_coffee_shops.py  fetch_grocery_stores.py  fetch_marta_stations.py  fetch_parks.py  fetch_restaurants.py  fetch_travel_times.py  filter_restaurants_to_msa.py  grocery.geojson  grocery_stores.json  highway_ga400.json  highway_i285.json  highways.json  marta_stations.json  park_landmarks.json  parks.json  restaurants.json  restaurants_in_msa.geojson  top_private_schools.geojson  travel_times.json
eda/research/: bars_nightclubs_overpass_query.txt  cafes.geojson  highway_points_ga400.geojson  highway_points_i285.geojson  highways_overpass_query.txt  highways_raw.geojson  marta_stations_overpass_query.txt  offices.geojson  parks.geojson  restaurants.geojson  restaurants_overpass_query.txt  restaurants_raw.geojson
src/prime_mfr/: __init__.py  __version__.py  config.py  data_processing.py  models.py  train.py
src/prime_mfr/cli/: __init__.py  main.py
src/prime_mfr/cli/commands/: __init__.py  ablate.py  clean.py  evaluate.py  list_cmd.py  predict.py  status.py  train.py  tune.py
src/prime_mfr/core/: __init__.py  paths.py  settings.py
src/prime_mfr/evaluation/: __init__.py  error_segmentation.py
src/prime_mfr/features/: __init__.py  contract.py  engineering.py  hist_rent.py
src/prime_mfr/pipeline/: __init__.py  stacked_cv.py
src/prime_mfr/pretraining/: __init__.py  build_v2.py
src/prime_mfr/tuning/: __init__.py  catboost.py  lightgbm.py
tests/: conftest.py  test_config.py  test_feature_contract.py  test_feature_geographic.py  test_features.py  test_metrics.py  test_smoke.py
